LF-4142 fix search and filter on mobile view

--- a/packages/webapp/src/components/Animals/Inventory/styles.module.scss
+++ b/packages/webapp/src/components/Animals/Inventory/styles.module.scss
@@ -16,7 +16,7 @@
 @import '../../../assets/mixin.scss';
 
 .noSearchResults {
-  margin-top: 24px;
+  margin-top: 40px;
 }
 
 .noSearchResultsDesktop {
@@ -46,6 +46,9 @@
   gap: 4px;
   padding: 8px 16px 8px 16px;
   background-color: var(--Colors-Primary-Primary-teal-50);
+  position: absolute;
+  z-index: 1;
+  width: 100%;
 }
 
 .searchResultsDesktop {
@@ -68,6 +71,10 @@
   flex: 1;
   display: flex;
   justify-content: end;
+}
+
+.tableWrapper {
+  padding-top: 73px; // search filter height (89px) - space between table header and body (16px)
 }
 
 .wrapper {
